# CalculateMAP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: CalculateMAP.h  main.h
src/: CalculateMAP.cpp
